feat (archives): add some styling

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
 
     <header class="c-siteheader">
       <a href="/">Matthew Passmore</a>
-      <p>Website design &amp; development</p>
+      <p class="c-siteheader__strapline">Website design &amp; development</p>
       <nav>
         <ul>
           <li><a href="/">Notes</a></li>
