--- a/src/index.njk
+++ b/src/index.njk
@@ -2,19 +2,18 @@
 layout: layouts/base.njk
 ---
 
-<h1>Notes</h1>
+<h1 class="c-page-heading">Notes</h1>
 
 {% for post in collections.notes | reverse %}
-  <article>
-    <h2>
+
+  <article class="c-tease">
+    <h2 class="c-tease__heading">
       <a href="{{ post.url }}">{{ post.data.title }}</a>
     </h2>
-    <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time>
-    <p>
-      <b>Tags:</b>
-      {% for tag in post.data.tags %}
-        <a href="/tags/{{ tag | slug }}">{{ tag }}</a>
-      {% endfor %}
+    <p class="c-tease__meta [ margin-top:none ]">
+      <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time> /
+      {% set comma = joiner() %}
+      {% for tag in post.data.tags %}{{ comma() }} <a href="/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
     </p>
   </article>
 {% endfor %}
