--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,8 +14,13 @@
 //--------------------------------------------------------------
 
 $measure: 65ch;
+$spacing-flow: 1.5rem;
+$serif: georgia, serif;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$primary-color: #116e9b;
+$secondary-color: #00dbff;
+$near-black: #333;
 
 
 //--------------------------------------------------------------
@@ -31,7 +36,6 @@ $mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
 * {
   max-width: $measure;
-  font-family: $sans-serif;
 }
 
 /* Remove default padding */
@@ -73,7 +77,19 @@ body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
+  background-color: #f0feff;
+  color: $near-black;
   line-height: 1.5;
+  font-family: $serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $sans-serif;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
@@ -82,10 +98,54 @@ ol[class] {
   list-style: none;
 }
 
+ul:not([class]),
+ol:not([class]) {
+  list-style: none;
+  counter-reset: li;
+
+  li {
+    position: relative;
+  }
+
+  li::before {
+    position: absolute;
+    left: -0.85em;
+    color: $primary-color;
+    font-weight: 600;
+  }
+
+  li + li {
+    margin-top: .5rem;
+  }
+}
+
+ul:not([class]) li::before { content: "\2022"; }
+
+ol:not([class]) li { 
+  counter-increment: li; 
+}
+
+ol:not([class]) li::before {
+  content: "." counter(li);
+  left: -1.125em;
+  text-align: right;
+  direction: rtl;
+}
+
 /* A elements that don't have a class get default styles */
 a:not([class]) {
+  border-bottom: 1px dotted;
+  // background: linear-gradient(180deg, rgba($primary-color, 0) calc(100% - .15em),rgba($primary-color, 1) 0);
   color: inherit;
   text-decoration-skip-ink: auto;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    border: 0;
+    background: linear-gradient(180deg, rgba($secondary-color, 0) calc(100% - .15em),rgba($secondary-color, 1) 0);
+    color: deeppink;
+  }
 }
 
 /* Make images easier to work with */
@@ -95,8 +155,9 @@ img {
 }
 
 /* Natural flow and rhythm in articles by default */
+article + article,
 article > * + * {
-  margin-top: 1em;
+  margin-top: 1.5em;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -126,12 +187,34 @@ code {
   font-size: .85rem;
 }
 
+blockquote > * {
+  display: inline;
+  background-color: rgba(orange, 0.2);
+}
+
+blockquote > :first-child::before,
+blockquote > :last-child::after {
+  color: $primary-color;
+  display: inline-block;
+}
+
+blockquote > :first-child::before {
+  content: open-quote;
+  margin-left: -8px;
+}
+
+blockquote > :last-child::after {
+  content: close-quote;
+  margin-right: -8px;
+}
+
 
 //--------------------------------------------------------------
 // #3. Layout
 //--------------------------------------------------------------
 
 .o-wrapper {
+  width: 90%;
   max-width: $measure;
   margin-left: auto;
   margin-right: auto;
@@ -146,13 +229,69 @@ code {
   padding: 2em 0;
 }
 
+.c-siteheader > a {
+  font-size: 1.125rem;
+  font-weight: 700;
+}
+
 .c-sitefooter {
   padding-bottom: 2em;
 }
+
+.c-page-heading {
+  color: $primary-color;
+  font-size: 1.125rem;
+}
+
+.c-page-heading::before {
+  content: '';
+  display: inline-block;
+  width: 10px;
+  height: 2px;
+  background-color: $primary-color;
+  margin-left: -12px;
+  margin-right: 2px;
+}
+
+.c-page-heading + * {
+  margin-top: $spacing-flow;
+}
+
+.c-tease-group-heading {
+  margin-top: $spacing-flow;
+  color: $primary-color;
+  font-size: 1rem;
+}
+
+.c-tease-group-heading + * {
+  margin-top: $spacing-flow;
+}
+
+.c-tease--link {
+  margin-left: 4%;
+}
+
+.c-tease__heading {
+  font-size: 1.125rem;
+}
+
+.c-tease__meta {
+  font-family: $sans-serif;
+  font-size: .875rem;
+}
+
+.c-tease time,
+.c-tease__meta b {
+  color: $primary-color;
+  font-weight: 400;
+}
+
 
 
 //--------------------------------------------------------------
 // #5. Utility
 //--------------------------------------------------------------
 
-
+.margin-top\:none {
+  margin-top: 0;
+}
