--- a/src/tags.njk
+++ b/src/tags.njk
@@ -8,19 +8,18 @@ pagination:
 permalink: /tags/{{ tag }}/
 ---
 
-<h1>Tag archive</h1>
+<h1 class=c-page-heading>Tag archive</h1>
 
 {% for post in collections[tag] | reverse %}
-  <article>
-    <h2>
+  <article class="c-tease">
+    <h2 class="c-tease__heading">
       <a href="{{ post.url }}">{{ post.data.title }}</a>
     </h2>
-    <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time>
-    <p>
+    <p class="c-tease__meta [ margin-top:none ]">
+      <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time>
       <b>Tags:</b>
-      {% for tag in post.data.tags %}
-        <a href="/tags/{{ tag | slug }}">{{ tag }}</a>
-      {% endfor %}
+      {% set comma = joiner() %}
+      {% for tag in post.data.tags %}{{ comma() }} <a href="/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
     </p>
-  </article>
+  </article><!-- .c-tease -->
 {% endfor %}
