--- a/src/index.njk
+++ b/src/index.njk
@@ -10,8 +10,8 @@ layout: layouts/base.njk
     <h2 class="c-tease__heading">
       <a href="{{ post.url }}">{{ post.data.title }}</a>
     </h2>
-    <p class="c-tease__meta [ margin-top:none ]">
-      <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time> /
+    <p class="c-tease__meta">
+    <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time> <b>//</b>
       {% set comma = joiner() %}
       {% for tag in post.data.noteTags %}{{ comma() }} <a href="/notes/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
     </p>
