--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,14 +13,17 @@
 // #1. Variables + Mixins
 //--------------------------------------------------------------
 
+$spacing-medium: 1.5rem;
 $measure: 65ch;
-$spacing-flow: 1.5rem;
 $serif: georgia, serif;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$line-height-copy: 1.5;
+$line-height-title: 1.125; 
 $primary-color: #116e9b;
 $secondary-color: #00dbff;
-$near-black: #333;
+$near-black: #111;
+$near-white: #fefefe;
 
 
 //--------------------------------------------------------------
@@ -31,35 +34,165 @@ $near-black: #333;
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-}
-
-* {
   max-width: $measure;
-}
-
-/* Remove default padding */
-ul[class],
-ol[class] {
+  box-sizing: border-box;
+  margin: 0;
   padding: 0;
+  background-color: inherit;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
 }
 
-/* Remove default margin */
+html {
+  background-color: $near-white;
+  color: $near-black;
+  font-family: $serif;
+  font-size: calc(1em + 0.15vw);
+  line-height: $line-height-copy;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+}
+
+body {
+ min-height: 100vh;
+}
+
+* + * {
+  margin-top: 2.25rem; 
+}
+
 body,
+li + li,
+[hidden] + * {
+  margin-top: 0;
+}
+
+p + p {
+  margin-top: 0.75rem;
+}
+
+:focus:not([tabindex="-1"]) {
+  outline: 4px solid #999;
+}
+
+/* fix for IE :( */
+[tabindex="-1"]:focus,
+div:not([tabindex]):focus {
+  outline: none;
+}
+
+a {
+  text-decoration: none;
+  border-bottom: 1px solid;
+  outline-offset: 2px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+[hidden] {
+  display: none;
+}
+
+[href="#main"] {
+  position: absolute;
+  top: -3rem;
+  display: block;
+  width: 100%;
+  margin-top: 0;
+  padding: 0.75rem;
+  background-color: #000;
+  color: $near-white;
+  text-align: center;
+  z-index: 1;
+}
+
+[href="#main"]:focus {
+  top: 0;
+  outline: none;
+}
+
 h1,
 h2,
 h3,
 h4,
-p,
-ul[class],
-ol[class],
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
-  margin: 0;
+h5,
+h6 {
+  font-family: $sans-serif;
+  line-height: $line-height-title;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.66rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 1rem;
+}
+
+h5 {
+  font-size: 0.85rem;
+  text-transform: uppercase;
+}
+
+pre {
+  overflow-x: auto;
+  padding: $spacing-medium;
+  border: 1px solid;
+}
+
+code {
+  font-family: $mono;
+  font-size: .85rem;
+}
+
+main ul,
+main ol {
+    margin-left: 2.25rem;
+}
+
+main li + li {
+    margin-top: 0.5rem;
+}
+
+main ul ul, 
+main ol ol, 
+main li ul, 
+main li ol {
+    margin-top: 0.5rem;
+}
+
+ol ol {
+  list-style: lower-latin;
+}
+
+ol ol ol {
+  list-style: lower-roman;
+}
+
+blockquote {
+  position: relative;
+  font-style: italic;
+  quotes: "“" "”";
+}
+
+blockquote::before {
+  content: open-quote;
+  position: absolute;
+  left: -1.125rem;
+  font-size: 2em;
+  line-height: 1;
 }
 
 html,
@@ -72,100 +205,10 @@ footer {
   max-width: none;
 }
 
-/* Set core body defaults */
-body {
-  min-height: 100vh;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  background-color: #f0feff;
-  color: $near-black;
-  line-height: 1.5;
-  font-family: $serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: $sans-serif;
-}
-
 /* Remove list styles on ul, ol elements with a class attribute */
 ul[class],
 ol[class] {
   list-style: none;
-}
-
-ul:not([class]),
-ol:not([class]) {
-  list-style: none;
-  counter-reset: li;
-
-  li {
-    position: relative;
-  }
-
-  li::before {
-    position: absolute;
-    left: -0.85em;
-    color: $primary-color;
-    font-weight: 600;
-  }
-
-  li + li {
-    margin-top: .5rem;
-  }
-}
-
-ul:not([class]) li::before { content: "\2022"; }
-
-ol:not([class]) li { 
-  counter-increment: li; 
-}
-
-ol:not([class]) li::before {
-  content: "." counter(li);
-  left: -1.125em;
-  text-align: right;
-  direction: rtl;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  border-bottom: 1px dotted;
-  // background: linear-gradient(180deg, rgba($primary-color, 0) calc(100% - .15em),rgba($primary-color, 1) 0);
-  color: inherit;
-  text-decoration-skip-ink: auto;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    border: 0;
-    background: linear-gradient(180deg, rgba($secondary-color, 0) calc(100% - .15em),rgba($secondary-color, 1) 0);
-    color: deeppink;
-  }
-}
-
-/* Make images easier to work with */
-img {
-  max-width: 100%;
-  display: block;
-}
-
-/* Natural flow and rhythm in articles by default */
-article + article,
-article > * + * {
-  margin-top: 1.5em;
-}
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-  font: inherit;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
@@ -178,36 +221,6 @@ select {
   }
 }
 
-pre {
-  overflow-x: auto;
-}
-
-code {
-  font-family: $mono;
-  font-size: .85rem;
-}
-
-blockquote > * {
-  display: inline;
-  background-color: rgba(orange, 0.2);
-}
-
-blockquote > :first-child::before,
-blockquote > :last-child::after {
-  color: $primary-color;
-  display: inline-block;
-}
-
-blockquote > :first-child::before {
-  content: open-quote;
-  margin-left: -8px;
-}
-
-blockquote > :last-child::after {
-  content: close-quote;
-  margin-right: -8px;
-}
-
 
 //--------------------------------------------------------------
 // #3. Layout
@@ -216,8 +229,34 @@ blockquote > :last-child::after {
 .o-wrapper {
   width: 90%;
   max-width: $measure;
+  margin: 0 auto;
+}
+
+.o-center {
+  max-width: $measure;
   margin-left: auto;
   margin-right: auto;
+}
+
+.o-page {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0;
+}
+
+.o-page > * {
+  padding: 0 2.25rem;
+}
+
+.o-page > header {
+  flex-basis: 15rem;
+  flex-grow: 1;
+}
+
+.o-page > main {
+  flex-basis: 0;
+  flex-grow: 999;
+  min-width: 65%;
 }
 
 
@@ -226,7 +265,8 @@ blockquote > :last-child::after {
 //--------------------------------------------------------------
 
 .c-siteheader {
-  padding: 2em 0;
+  margin-top: 2.25rem;
+  font-family: $sans-serif;
 }
 
 .c-siteheader > a {
@@ -234,56 +274,54 @@ blockquote > :last-child::after {
   font-weight: 700;
 }
 
-.c-sitefooter {
-  padding-bottom: 2em;
+.c-siteheader__strapline {
+  margin-top: 0;
 }
 
-.c-page-heading {
-  color: $primary-color;
-  font-size: 1.125rem;
-}
+//.c-sitefooter {
+//  padding-bottom: 2em;
+//}
 
-.c-page-heading::before {
-  content: '';
-  display: inline-block;
-  width: 10px;
-  height: 2px;
-  background-color: $primary-color;
-  margin-left: -12px;
-  margin-right: 2px;
-}
+//.c-page-heading {
+//  color: $primary-color;
+//  font-size: 1.125rem;
+//}
 
-.c-page-heading + * {
-  margin-top: $spacing-flow;
-}
+//.c-page-heading::before {
+//  content: '';
+//  display: inline-block;
+//  width: 10px;
+//  height: 2px;
+//  background-color: $primary-color;
+//  margin-left: -12px;
+//  margin-right: 2px;
+//}
+
+//.c-page-heading + * {
+//  margin-top: $spacing-flow;
+//}
 
 .c-tease-group-heading {
-  margin-top: $spacing-flow;
-  color: $primary-color;
   font-size: 1rem;
+  text-align: right;
 }
 
-.c-tease-group-heading + * {
-  margin-top: $spacing-flow;
-}
+//.c-tease-group-heading + * {
+//  margin-top: $spacing-flow;
+//}
 
-.c-tease--link {
-  margin-left: 4%;
+.c-tease > header + * {
+  margin-top: $spacing-medium;
 }
 
 .c-tease__heading {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
+  line-height: 1.3;
 }
 
 .c-tease__meta {
-  font-family: $sans-serif;
-  font-size: .875rem;
-}
-
-.c-tease time,
-.c-tease__meta b {
-  color: $primary-color;
-  font-weight: 400;
+  margin-top: 0.25rem;
+  // font-size: 0.85em;
 }
 
 
@@ -291,6 +329,10 @@ blockquote > :last-child::after {
 //--------------------------------------------------------------
 // #5. Utility
 //--------------------------------------------------------------
+
+.max-width\:measure {
+  max-width: $measure;
+}
 
 .margin-top\:none {
   margin-top: 0;
