--- a/src/index.njk
+++ b/src/index.njk
@@ -5,15 +5,5 @@ layout: layouts/base.njk
 <h1 class="c-page-heading">Notes</h1>
 
 {% for post in collections.posts | reverse %}
-
-  <article class="c-tease">
-    <h2 class="c-tease__heading">
-      <a href="{{ post.url }}">{{ post.data.title }}</a>
-    </h2>
-    <p class="c-tease__meta">
-    <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time> <b>//</b>
-      {% set comma = joiner() %}
-      {% for tag in post.data.noteTags %}{{ comma() }} <a href="/notes/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
-    </p>
-  </article>
+  {% include "partials/tease-post.njk" %}
 {% endfor %}
