--- a/src/links.njk
+++ b/src/links.njk
@@ -25,19 +25,5 @@ layout: layouts/base.njk
     {% set date = post.date | dateFilter %}
   {% endif %}
 
-  <article class="c-tease c-tease--link">
-    <header>
-      <h3 class="c-tease__heading">
-        <a href="{{ post.data.url }}">{{ post.data.title }}</a>
-      </h3>
-      <p class="c-tease__meta">
-        <b>//</b>
-        {% set comma = joiner() %}
-        {% for tag in post.data.linkTags %}{{ comma() }} <a href="/links/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
-      </p>
-    </header>
-
-    {{ post.templateContent | safe }}
-  </article><!-- .c-tease -->
-
+  {% include "partials/tease-link.njk" %}
 {% endfor %}
