--- a/src/links/tag-pages.njk
+++ b/src/links/tag-pages.njk
@@ -12,26 +12,17 @@ pagination:
 <h1 class=c-page-heading>Links' tag archive: {{ linkTag }}</h1>
 
 {% for post in collections.linkTagCollections[ linkTag ] | reverse %}
-  <article class="c-tease c-tease--link">
-    <header>
-      <h3 class="c-tease__heading">
-        <a href="{{ post.data.url }}">{{ post.data.title }}</a>
-      </h3>
-      {% for item in post.data.testTags %}
-        <p>item: {{ item }}</p>
-      {% endfor %}
-      <p class="c-tease__meta [ margin-top:none ]">
-        <b>Tags</b> /
-        {% set comma = joiner() %}
-        {% for tag in post.data.linkTags %}{{ comma() }} <a href="/links/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
-      </p>
-    </header>
 
-    {{ post.templateContent | safe }}
-  </article><!-- .c-tease -->
+  {% if date != post.date | dateFilter %}
+    <h2 class="c-tease-group-heading">{{ post.date | dateFilter }}</h2>
+    {% set date = post.date | dateFilter %}
+  {% endif %}
+
+  {% include "partials/tease-link.njk" %}
 {% endfor %}
 
 
+<!--
 <em class="notes-subnote">
   <a href="/links/">See all tags</a> 
   {% for tag in collections.linkTagList %}
@@ -41,5 +32,6 @@ pagination:
     </a> 
   {% endfor %}
 </em>
+-->
 
 
