feat (typography): tighten spacing after article headings

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -148,6 +148,16 @@ h5 {
   text-transform: uppercase;
 }
 
+article h1 + *,
+article h2 + *,
+article h3 + *,
+article h4 + *,
+article h5 + *,
+article h6 + * {
+  margin-top: 1rem
+}
+
+
 pre {
   overflow-x: auto;
   padding: $spacing-medium;
