feat (accessibility): make skip-to-content link fullwidth

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -104,6 +104,7 @@ img {
   top: -3rem;
   display: block;
   width: 100%;
+  max-width: none;
   margin-top: 0;
   padding: 0.75rem;
   background-color: #000;
