feat (typography): tighten spacing between lists and preceeding text

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -198,6 +198,11 @@ main ol {
     margin-left: 1rem;
 }
 
+main p + ul,
+main p + ol {
+  margin-top: 0.75rem;
+}
+
 main li + li {
     margin-top: $s-2;
 }
