feat (feed): add rss feed for writing

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -38,6 +38,10 @@
 
     </div>
 
+    <footer role="contentinfo">
+      <a href="/feed/writing.xml">RSS Feed</a>
+    </footer>
+
     <script>{% include 'js/main.js' %}</script>
   </body>
 </html>
