--- a/src/_includes/partials/tease-link.njk
+++ b/src/_includes/partials/tease-link.njk
@@ -1,12 +1,10 @@
 <article class="c-tease c-tease--link">
   <header>
-    <h3 class="c-tease__heading">
+    <h3 class="c-tease__heading h2">
       <a href="{{ post.data.url }}">{{ post.data.title }}</a>
     </h3>
-    <p class="c-tease__meta">
-      <b>//</b>
-      {% set comma = joiner() %}
-      {% for tag in post.data.linkTags %}{{ comma() }} <a href="/links/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
+    <p class="c-tease__meta c-tags">
+      {% for tag in post.data.linkTags %}<a href="/links/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
     </p>
   </header>
 
