--- a/src/_includes/partials/tease-post.njk
+++ b/src/_includes/partials/tease-post.njk
@@ -2,10 +2,11 @@
   <h2 class="c-tease__heading">
     <a href="{{ post.url }}">{{ post.data.title }}</a>
   </h2>
-  <p class="c-tease__meta">
-  <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time> <b>//</b>
-    {% set comma = joiner() %}
-    {% for tag in post.data.noteTags %}{{ comma() }} <a href="/notes/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
+  <p class="c-tease__meta c-tags">
+    <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time>
+    {#
+    {% for tag in post.data.noteTags %}<a href="/notes/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
+    #}
   </p>
 </article>
 
