--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,31 +15,39 @@
 
 // Modular scale
 // link: https://every-layout.dev/rudiments/modular-scale/
-$ratio: 1.5;
+$ratio: 1.3;
+
+$s-1: .9375rem;
 $s0: 1rem;
-$s-1: $s0 / $ratio;
-$s-2: $s-1 / $ratio;
-$s-3: $s-2 / $ratio;
-$s-4: $s-3 / $ratio;
-$s-5: $s-4 / $ratio;
-$s1: $s0 * $ratio;
-$s2: $s1 * $ratio;
-$s3: $s2 * $ratio;
-$s4: $s3 * $ratio;
-$s5: $s4 * $ratio;
+$s1: 1.125rem;
+$s2: 1.25rem;
+$s3: 1.5rem;
+$s4: 2rem;
+$s5: 2.25rem;
+
+// font-family: 'Source Sans Pro', sans-serif;
+// font-family: 'PT Sans Narrow', sans-serif;
+// font-family: 'Dosis', sans-serif;
+// font-family: 'Cabin', sans-serif;
+// font-family: 'Mukta', sans-serif;
+// font-family: 'Hind Guntur', sans-serif;
+
 
 $measure: 65ch;
-$serif: georgia, serif;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$serif: 'Crimson Text', georgia, serif;
+$sans-serif: 'Cabin', sans-serif;
+// $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $line-height-copy: $ratio;
 $line-height-title: 1.125; 
-$primary-color: #116e9b;
+$primary-color: #038472;
 $secondary-color: #00dbff;
-$near-black: #111;
+$near-black: #333;
 $near-white: #fefefe;
 $dark: $near-black;
 $light: $near-white;
+
+$breakpoint-not-small: 'screen and (min-width: 600px)';
 
 
 //--------------------------------------------------------------
@@ -54,7 +62,6 @@ $light: $near-white;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: inherit;
   color: inherit;
   font-family: inherit;
   font-size: inherit;
@@ -64,18 +71,21 @@ html {
   background-color: $near-white;
   color: $near-black;
   font-family: $serif;
-  font-size: calc(1em + 0.15vw);
+  font-size: $s0;
   line-height: $line-height-copy;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
+  // -moz-osx-font-smoothing: grayscale;
+  // -webkit-font-smoothing: antialiased;
 }
 
 body {
  min-height: 100vh;
+ font-size: $s2;
 }
 
 * + * {
-  margin-top: $s2; 
+  margin-top: $s5; 
 }
 
 body,
@@ -99,9 +109,14 @@ div:not([tabindex]):focus {
 }
 
 a {
-  text-decoration: none;
-  border-bottom: 1px solid;
-  outline-offset: 2px;
+  // text-decoration: none;
+  // border-bottom: 1px solid;
+  // outline-offset: 2px;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
 }
 
 img {
@@ -145,25 +160,34 @@ h5,
 h6 {
   font-family: $sans-serif;
   line-height: $line-height-title;
+  font-weight: 500;
 }
 
-h1 {
-  font-size: 2rem;
+h1,
+.h1 {
+  font-size: $s3;
+  font-style: normal;
 }
 
-h2 {
-  font-size: 1.66rem;
+h2,
+.h2 {
+  font-size: $s2;
+  font-style: normal;
 }
 
-h3 {
-  font-size: 1.25rem;
+h3,
+.h3 {
+  font-size: $s1;
+  font-style: italic;
 }
 
-h4 {
-  font-size: 1rem;
+h4,
+.h4 {
+  font-size: $s0;
 }
 
-h5 {
+h5,
+.h5 {
   font-size: 0.85rem;
   text-transform: uppercase;
 }
@@ -174,7 +198,22 @@ article h3 + *,
 article h4 + *,
 article h5 + *,
 article h6 + * {
-  margin-top: $s0;
+  margin-top: $s1;
+}
+
+article header + * {
+  margin-top: $s4 * 2;
+}
+
+article header {
+  display: flex;
+  flex-direction: column;
+}
+
+article time {
+  order: -1;
+  margin-top: 0;
+  margin-bottom: $s5;
 }
 
 
@@ -200,7 +239,11 @@ code {
 
 main ul,
 main ol {
-    margin-left: 1rem;
+  list-style: none;
+}
+
+main ol {
+  counter-reset: my-counter;
 }
 
 main p + ul,
@@ -209,14 +252,14 @@ main p + ol {
 }
 
 main li + li {
-    margin-top: $s-2;
+    margin-top: 0.5rem;
 }
 
 main ul ul, 
 main ol ol, 
 main li ul, 
 main li ol {
-    margin-top: $s-2;
+    margin-top: 0.5rem;
 }
 
 ol ol {
@@ -227,16 +270,48 @@ ol ol ol {
   list-style: lower-roman;
 }
 
+main article li {
+  position: relative;
+  padding-left: 1rem;
+}
+
+main article ul li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 13px;
+  display: block;
+  width: 8px;
+  height: 2px;
+  background-color: $primary-color;
+}
+
+main article ol li {
+  position: relative;
+  counter-increment: my-counter;
+}
+
+main article ol li::before {
+  content: counter(my-counter) ". ";
+  position: absolute;
+  left: 0;
+  color: $primary-color;
+}
+
 blockquote {
   position: relative;
-  font-style: italic;
+  // font-style: italic;
   quotes: "“" "”";
+  padding: 1rem;
+  background-color: rgba($primary-color, 0.1);
 }
 
 blockquote::before {
   content: open-quote;
   position: absolute;
-  left: -1.125rem;
+  top: -0.75rem;
+  left: -0.15rem;
+  color: $primary-color;
   font-size: 2em;
   line-height: 1;
 }
@@ -274,8 +349,13 @@ button {
 button svg {
   width: 1em;
   height: 1em;
+  margin-top: 0;
   vertical-align: middle;
   transform-origin: 0.5em 0.4em;
+}
+
+.c-archive-header button svg {
+  vertical-align: bottom;
 }
 
 [aria-expanded] + * {
@@ -364,12 +444,13 @@ $cluster-space: 0.75rem;
 }
 
 .c-siteheader > a {
-  font-size: 1.125rem;
+  font-size: $s2;
   font-weight: 700;
 }
 
 .c-siteheader__strapline {
   margin-top: 0;
+  font-size: $s0;
 }
 
 .c-archive-header {
@@ -429,8 +510,44 @@ $cluster-space: 0.75rem;
 }
 
 .c-tease__meta {
-  margin-top: $s-4;
+  margin-top: 0;
+  // margin-top: $s-4;
   // font-size: 0.85em;
+}
+
+time {
+  margin-right: 8px;
+  color: #757474;
+  font-style: italic;
+}
+
+.c-post header .c-tags {
+  margin-top: 0.4rem;
+}
+
+.c-tags a {
+  position: relative;
+  display: inline-block;
+  margin-top: 0;
+  margin-right: 8px;
+  padding-left: 12px;
+  font-size: $s0;
+  font-family: $sans-serif;
+  letter-spacing: 1px;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+  }
+}
+
+.c-tags a::before {
+  content: '#';
+  position: absolute;
+  left: 0;
+  margin-right: 1px;
+  color: $primary-color;
 }
 
 .c-codetitle {
@@ -441,7 +558,7 @@ $cluster-space: 0.75rem;
 }
 
 .c-codetitle + pre {
-  margin-top: $s-2;
+  margin-top: 0.5rem;
 }
 
 /**
@@ -604,3 +721,46 @@ pre[class*="language-"] {
 .margin-top\:none {
   margin-top: 0;
 }
+
+
+
+/* Inline #4 | http://localhost:8080/notes/looking-forward-to-2020/ */
+
+// ul {
+//   list-style: none;
+// }
+
+// li::before {
+//   /* content: '.attr'; */
+//   display: block;
+//   width: 8px;
+//   height: 2px;
+//   background: #1ca8a8;
+//   vertical-align: top;
+//   margin-top: 11px;
+//   margin-right: 8px;
+//   float: left;
+// }
+
+// ul {
+//   margin-left: 0 !important;
+// }
+
+// li {
+// }
+
+// h2 {
+// }
+
+// /* Inline #1 | http://localhost:8080/notes/looking-forward-to-2020/ */
+
+// h3 {
+//   font-weight: 400;
+//   font-size: 18px;
+//   font-style: italic;
+// }
+
+// * + * {
+//   /* margin-top: 1.25rem; */
+//   margin-top: 2.25rem;
+// }
