--- a/src/_includes/partials/tease-post.njk
+++ b/src/_includes/partials/tease-post.njk
@@ -1,12 +1,9 @@
-<article class="c-tease">
-  <h2 class="c-tease__heading">
+<article>
+  <h2>
     <a href="{{ post.url }}">{{ post.data.title }}</a>
   </h2>
-  <p class="c-tease__meta c-tags">
-    <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time>
-    {#
-    {% for tag in post.data.noteTags %}<a href="/notes/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
-    #}
-  </p>
+  <time datetime="{{ post.date | w3DateFilter }}">{{ post.date | dateFilter }}</time>
+  {#
+  {% for tag in post.data.noteTags %}<a href="/notes/tags/{{ tag | slug }}">{{ tag }}</a>{% endfor %}
+  #}
 </article>
-
