--- a/src/index.njk
+++ b/src/index.njk
@@ -1,23 +1,56 @@
 ---
 layout: layouts/base.njk
+controller: home
 ---
 
-<header class="c-archive-header">
-  <h1 class="c-page-heading">Notes</h1>
+<!-- INTRO -->
+<div class="c-home-intro o-hetfield">
+  <h1>{{ home.introHeading }}</h1>
+  <p>{{ home.introContent }}</p>
+  <div class="c-home-intro__image">
+    <img src="/images/me.jpg" alt="Matthew Passmore">
+  </div><!-- .c-home-intro__image -->
+</div><!-- .o-hetfield -->
 
-  {# Insert toggle button here with JS #}
 
-  <div class="o-cluster">
-    <ul class="c-tags">
-      {% for tag in collections.noteTagList %}
-        <li>
-          <a href="/notes/tags/{{ tag | slug }}/">{{ tag | lower }}</a> 
-        </li>
+<!-- PROBLEMS -->
+<div class="c-home-problems o-hetfield">
+  <h2>Why business seek my help</h2>
+  <ul class="o-hetfield">
+    {% for problem in home.problems %}
+    <li>
+      <h3>{{ problem.title }}</h3>
+      <p>{{ problem.desc }}</p>
+    </li>
+    {% endfor %}
+  </ul>
+</div><!-- .c-home-problems -->
+
+
+<div class="o-hetfield">
+
+  <!-- SERVICES -->
+  <div class="c-home-services">
+    <h2>How I help businesses thrive</h2>
+    <ol class="reset">
+      {% for service in home.services %}
+      <li>
+        <h3>{{ service.title }}</h3> 
+        <p>{{ service.desc }}</p>
+      </li>
+      {% endfor %}
+    </ol>
+  </div><!-- .c-home-services -->
+  
+  
+  <!-- CLIENTS -->
+  <div class="c-home-clients">
+    <h2>Trusted to deliver successful projects</h2>
+    <ul class="reset">
+      {% for client in home.clients %}
+      <li><img src="/images/{{ client.logo }}" alt="{{ client.name }}"></li>
       {% endfor %}
     </ul>
-  </div><!-- .o-cluster -->
-</header>
+  </div><!-- .c-home-clients -->
 
-{% for post in collections.posts | reverse %}
-  {% include "partials/tease-post.njk" %}
-{% endfor %}
+</div><!-- .o-hetfield -->
