--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,65 +1,13 @@
+@import 'config';
+
 /*
- *    TABLE OF CONTENTS
- *
- *    1. Variables
- *    2. Global
- *    3. Layout
- *    4. Components
- *    5. Utility helper classes
- *
+ * GLOBAL
  */
-
-//--------------------------------------------------------------
-// #1. Variables + Mixins
-//--------------------------------------------------------------
-
-// Modular scale
-// link: https://every-layout.dev/rudiments/modular-scale/
-$ratio: 1.3;
-
-$s-1: .9375rem;
-$s0: 1rem;
-$s1: 1.125rem;
-$s2: 1.25rem;
-$s3: 1.5rem;
-$s4: 2rem;
-$s5: 2.25rem;
-
-// font-family: 'Source Sans Pro', sans-serif;
-// font-family: 'PT Sans Narrow', sans-serif;
-// font-family: 'Dosis', sans-serif;
-// font-family: 'Cabin', sans-serif;
-// font-family: 'Mukta', sans-serif;
-// font-family: 'Hind Guntur', sans-serif;
-
-
-$measure: 65ch;
-$serif: 'Crimson Text', georgia, serif;
-$sans-serif: 'Cabin', sans-serif;
-// $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$line-height-copy: $ratio;
-$line-height-title: 1.125; 
-$primary-color: #038472;
-$secondary-color: #00dbff;
-$near-black: #333;
-$near-white: #fefefe;
-$dark: $near-black;
-$light: $near-white;
-
-$breakpoint-not-small: 'screen and (min-width: 600px)';
-
-
-//--------------------------------------------------------------
-// #2. Global
-//--------------------------------------------------------------
-
-/* Box sizing rules */
 *,
 *::before,
 *::after {
-  max-width: $measure;
   box-sizing: border-box;
+  max-width: var(--measure-long);
   margin: 0;
   padding: 0;
   color: inherit;
@@ -67,77 +15,26 @@ $breakpoint-not-small: 'screen and (min-width: 600px)';
   font-size: inherit;
 }
 
-html {
-  background-color: $near-white;
-  color: $near-black;
-  font-family: $serif;
-  font-size: $s0;
-  line-height: $line-height-copy;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  // -moz-osx-font-smoothing: grayscale;
-  // -webkit-font-smoothing: antialiased;
-}
-
 body {
- min-height: 100vh;
- font-size: $s2;
-}
-
-* + * {
-  margin-top: $s5; 
-}
-
-body,
-li + li,
-[hidden] + * {
-  margin-top: 0;
-}
-
-p + p {
-  margin-top: $s0;
-}
-
-:focus:not([tabindex="-1"]) {
-  outline: 4px solid #999;
-}
-
-/* fix for IE :( */
-[tabindex="-1"]:focus,
-div:not([tabindex]):focus {
-  outline: none;
-}
-
-a {
-  // text-decoration: none;
-  // border-bottom: 1px solid;
-  // outline-offset: 2px;
-
-  &:hover,
-  &:focus {
-    text-decoration: none;
-  }
-}
-
-img {
-  display: block;
-  max-width: 100%;
-}
-
-[hidden] {
-  display: none;
+  min-height: 100vh;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  color: var(--near-black);
+  font-family: var(--serif);
+  font-size: var(--step-0);
+  line-height: var(--line-height-copy);
 }
 
 [href="#main"] {
   position: absolute;
-  top: -3rem;
+  top: -4rem;
   display: block;
   width: 100%;
   max-width: none;
   margin-top: 0;
   padding: 0.75rem;
   background-color: #000;
-  color: $near-white;
+  color: var(--near-white);
   text-align: center;
   z-index: 1;
 }
@@ -147,10 +44,61 @@ img {
   outline: none;
 }
 
-[role="contentinfo"] {
-  padding-bottom: $s1;
-  text-align: center;
+// main * + * {
+//   margin-top: $flow; 
+// }
+
+//body,
+//li + li,
+//[hidden] + * {
+//  margin-top: 0;
+//}
+
+//p + p {
+//  margin-top: $s0;
+//}
+
+//:focus:not([tabindex="-1"]) {
+//  outline: 4px solid #999;
+//}
+
+///* fix for IE :( */
+//[tabindex="-1"]:focus,
+//div:not([tabindex]):focus {
+//  outline: none;
+//}
+
+[href] {
+  text-decoration-color: #ccc;
+  text-decoration-thickness: 2px;
+
+  &:hover,
+  &:focus {
+    color: var(--primary-color);
+    text-decoration: none;
+  }
 }
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+svg {
+  width: 0.75em;
+  height: 0.75em;
+  vertical-align: baseline;
+}
+
+[hidden] {
+  display: none;
+}
+
+
+//[role="contentinfo"] {
+//  padding-bottom: $s1;
+//  text-align: center;
+//}
 
 h1,
 h2,
@@ -158,68 +106,73 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $sans-serif;
-  line-height: $line-height-title;
-  font-weight: 500;
+  font-family: var(--sans-serif);
+  line-height: var(--line-height-title);
+  font-weight: 700;
+  font-size: var(--step-0);
 }
 
-h1,
-.h1 {
-  font-size: $s3;
-  font-style: normal;
-}
+//h1,
+//.h1 {
+//  font-size: $s3;
+//  font-style: normal;
+//}
 
-h2,
-.h2 {
-  font-size: $s2;
-  font-style: normal;
-}
+//h2,
+//.h2 {
+//  font-size: $s2;
+//  font-style: normal;
+//}
 
-h3,
-.h3 {
-  font-size: $s1;
+//h3,
+//.h3 {
+//  font-size: $s1;
+//  font-style: italic;
+//}
+
+//h4,
+//.h4 {
+//  font-size: $s0;
+//}
+
+//h5,
+//.h5 {
+//  font-size: 0.85rem;
+//  text-transform: uppercase;
+//}
+
+//article h1 + *,
+//article h2 + *,
+//article h3 + *,
+//article h4 + *,
+//article h5 + *,
+//article h6 + * {
+//  margin-top: $s1;
+//}
+
+//article header + * {
+//  margin-top: $s4 * 2;
+//}
+
+//article header {
+//  display: flex;
+//  flex-direction: column;
+//}
+
+//article time {
+//  order: -1;
+//  margin-top: 0;
+//  margin-bottom: $s5;
+//}
+
+time {
+  color: var(--light-grey);
   font-style: italic;
 }
 
-h4,
-.h4 {
-  font-size: $s0;
-}
-
-h5,
-.h5 {
-  font-size: 0.85rem;
-  text-transform: uppercase;
-}
-
-article h1 + *,
-article h2 + *,
-article h3 + *,
-article h4 + *,
-article h5 + *,
-article h6 + * {
-  margin-top: $s1;
-}
-
-article header + * {
-  margin-top: $s4 * 2;
-}
-
-article header {
-  display: flex;
-  flex-direction: column;
-}
-
-article time {
-  order: -1;
-  margin-top: 0;
-  margin-bottom: $s5;
-}
-
-
 pre {
   overflow-x: auto;
-  padding: $s1;
+  padding: var(--step-0);
   border: 1px solid;
 }
 
@@ -230,141 +183,147 @@ pre * + * {
 code {
   padding-left: 4px;
   padding-right: 4px;
-  background-color: #efefef;
-  font-size: .85rem;
-  font-family: $mono;
+  font-size: 0.7em;
+  font-family: var(--mono);
   word-break: break-word;
   hyphens: manual;
 }
 
-main ul,
-main ol {
-  list-style: none;
-}
+ul,
+ol { list-style: none; }
 
-main ol {
-  counter-reset: my-counter;
-}
+ol { counter-reset: my-counter; }
 
-main p + ul,
-main p + ol {
-  margin-top: 0.75rem;
-}
-
-main li + li {
-    margin-top: 0.5rem;
-}
-
-main ul ul, 
-main ol ol, 
-main li ul, 
-main li ol {
-    margin-top: 0.5rem;
-}
-
+ul ul, 
 ol ol {
-  list-style: lower-latin;
+  margin-top: 0.5rem;
 }
 
-ol ol ol {
-  list-style: lower-roman;
-}
-
-main article li {
+ul:not([class]) li,
+ol:not([class]) li {
   position: relative;
-  padding-left: 1rem;
+  padding-left: var(--step--1);
 }
 
-main article ul li::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 13px;
-  display: block;
-  width: 8px;
-  height: 2px;
-  background-color: $primary-color;
+ul:not([class]) li {
+  padding-left: var(--step--2);
 }
 
-main article ol li {
+ol:not([class]) li {
+  padding-left: 1.15rem;
   position: relative;
   counter-increment: my-counter;
 }
 
-main article ol li::before {
+ul:not([class]) li + li,
+ol:not([class]) li + li {
+    margin-top: var(--step--2);
+}
+
+ul:not([class]) li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0.65em;
+  display: block;
+  width: 8px;
+  height: 2px;
+  background-color: var(--primary-color);
+}
+
+ol:not([class]) li::before {
   content: counter(my-counter) ". ";
   position: absolute;
   left: 0;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
-blockquote {
-  position: relative;
-  // font-style: italic;
-  quotes: "“" "”";
-  padding: 1rem;
-  background-color: rgba($primary-color, 0.1);
-}
+//blockquote {
+//  position: relative;
+//  // font-style: italic;
+//  quotes: "“" "”";
+//  padding: 1rem;
+//  background-color: rgba(var(--primary-color), 0.1);
+//}
 
-blockquote::before {
-  content: open-quote;
-  position: absolute;
-  top: -0.75rem;
-  left: -0.15rem;
-  color: $primary-color;
-  font-size: 2em;
-  line-height: 1;
-}
+//blockquote::before {
+//  content: open-quote;
+//  position: absolute;
+//  top: -0.75rem;
+//  left: -0.15rem;
+//  color: var(--primary-color);
+//  font-size: 2em;
+//  line-height: 1;
+//}
 
+*::before,
+*::after,
 html,
-body,
 div,
 header,
 nav,
 main,
+section,
+article,
+svg,
 footer {
   max-width: none;
 }
 
 main {
-  margin-bottom: $s2;
+  // margin-top: $s5;
 }
 
-/* Remove list styles on ul, ol elements with a class attribute */
-ul[class],
-ol[class] {
-  margin-left: 0;
-  list-style: none;
+* + * {
+  margin-top: var(--step-3);
+}
+
+p + p {
+  margin-top: 1em;
+} 
+
+p + ul,
+p + ol {
+  margin-top: var(--step--2);
+}
+
+h1 + *,
+h2 + *,
+h3 + *,
+h4 + *,
+h5 + *,
+h6 + * {
+  margin-top: 1em;
 }
 
 button {
-  padding: 0.5rem;
+  padding: calc(var(--step--2) / 2);
   border: 0;
   border-radius: 0.2rem;
-  background-color: $dark;
-  color: $light;
+  background-color: var(--dark);
+  color: var(--light);
+  font-family: var(--sans-serif);
+  font-size: var(--step--2);
+  letter-spacing: 1px;
+  text-transform: uppercase;
   cursor: pointer;
 }
 
 button svg {
-  width: 1em;
-  height: 1em;
+  width: 0.75em;
+  height: 0.75em;
   margin-top: 0;
-  vertical-align: middle;
-  transform-origin: 0.5em 0.4em;
-}
-
-.c-archive-header button svg {
-  vertical-align: bottom;
+  vertical-align: baseline;
+  transform-origin: 0.38em 0.5em;
 }
 
 [aria-expanded] + * {
-  margin-top: $s0;
+  margin-top: var(--step--2);
 }
 
-[aria-expanded="true"] svg {
-  transform: rotate(180deg);
-}
+// [aria-expanded="true"] svg {
+//   transform: rotate(180deg);
+// }
 
 /* Remove all animations and transitions for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
@@ -377,390 +336,165 @@ button svg {
 }
 
 
-//--------------------------------------------------------------
-// #3. Layout
-//--------------------------------------------------------------
 
-.o-wrapper {
-  width: 90%;
-  max-width: $measure;
-  margin: 0 auto;
-}
-
-.o-center {
-  max-width: $measure;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-$cluster-space: 0.75rem;
-.o-cluster {
-  overflow: hidden;
-}
-
-.o-cluster > * {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -$cluster-space / 2;
-}
-
-.o-cluster > ul {
-  list-style: none;
-}
-
-.o-cluster > * > * {
-  margin: $cluster-space / 2;
-}
-
-.o-page {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 0;
-}
-
-.o-page > * {
-  padding: 0 $s1;
-}
-
-.o-page > header {
-  flex-basis: 15rem;
-  flex-grow: 1;
-}
-
-.o-page > main {
-  flex-basis: 0;
-  flex-grow: 999;
-  min-width: 65%;
-}
-
-
-//--------------------------------------------------------------
-// #4. Components
-//--------------------------------------------------------------
-
-.c-siteheader {
-  margin-top: $s2;
-  font-family: $sans-serif;
-}
-
-.c-siteheader > a {
-  font-size: $s2;
-  font-weight: 700;
-}
-
-.c-siteheader__strapline {
-  margin-top: 0;
-  font-size: $s0;
-}
-
-.c-archive-header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: -$s0;
-}
-
-.c-archive-header > * {
-  margin-top: $s0;
-}
-
-.c-archive-header > .o-cluster {
-  flex-basis: 100%;
-}
-
-//.c-sitefooter {
-//  padding-bottom: 2em;
-//}
-
-.c-page-heading {
-  margin-right: 1rem;
-}
-
-//.c-page-heading::before {
-//  content: '';
-//  display: inline-block;
-//  width: 10px;
-//  height: 2px;
-//  background-color: $primary-color;
-//  margin-left: -12px;
-//  margin-right: 2px;
-//}
-
-//.c-page-heading + * {
-//  margin-top: $spacing-flow;
-//}
-
-.c-tease-group-heading {
-  font-size: 1rem;
-  text-align: right;
-}
-
-//.c-tease-group-heading + * {
-//  margin-top: $spacing-flow;
-//}
-
-.c-tease > header + * {
-  margin-top: $s1;
-}
-
-.c-tease__heading {
-  font-size: 1.25rem;
-  line-height: 1.4;
-}
-
-.c-tease__meta {
-  margin-top: 0;
-  // margin-top: $s-4;
-  // font-size: 0.85em;
-}
-
-time {
-  margin-right: 8px;
-  color: #757474;
-  font-style: italic;
-}
-
-.c-post header .c-tags {
-  margin-top: 0.4rem;
-}
-
-.c-tags a {
-  position: relative;
-  display: inline-block;
-  margin-top: 0;
-  margin-right: 8px;
-  padding-left: 12px;
-  font-size: $s0;
-  font-family: $sans-serif;
-  letter-spacing: 1px;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    text-decoration: underline;
-  }
-}
-
-.c-tags a::before {
-  content: '#';
-  position: absolute;
-  left: 0;
-  margin-right: 1px;
-  color: $primary-color;
-}
-
-.c-codetitle {
-  margin-top: $s1;
-  font-size: .75em;
-  font-family: $mono;
-  text-align: right;
-}
-
-.c-codetitle + pre {
-  margin-top: 0.5rem;
-}
-
-/**
- * Syntax highlighting for code blocks
- * Colours based on a11y-dark theme: https://github.com/PrismJS/prism-themes/blob/master/themes/prism-a11y-dark.css
- * @author ericwbailey
+/*
+ * Objects
  */
-code[class*="language-"],
-pre[class*="language-"] {
-  border: 0;
-  background: none;
-  color: #f8f8f2;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
-  tab-size: 4;
-  hyphens: none;
+@import "objects.wrapper";
+@import "objects.cluster";
+@import "objects.stack";
+// @import "objects.grids";
+// @import "objects.center";
+// @import "objects.page";
+
+
+
+/*
+ * COMPONENTS
+ */
+// @import "components.siteheader";
+// @import "components.primarynav";
+// @import "components.icons";
+// @import "components.home";
+// @import "components.archive";
+// @import "components.post";
+// @import "components.tag";
+// @import "components.code-syntax-highlighting";
+// @import "components.codetitle";
+
+
+//.o-home-header > * {
+//  overflow: hidden
+//}
+//.o-home-header > * {
+//  display: flex;
+//  flex-wrap: wrap;
+//  align-items: flex-end;
+//  margin-right: calc(#{$s3} / 2 * -1);
+//  margin-left: calc(#{$s3} / 2 * -1);
+//}
+
+//.o-home-header > * > * {
+//  margin: calc(#{$s3} / 2);
+//  flex-grow: 1;
+//}
+
+//.o-home-header > * > :first-child {
+//  flex-basis: 0;
+//  flex-grow: 999;
+//  min-width: calc(70% - #{$s3});
+//}
+
+//.o-home-intro > * {
+//  overflow: hidden
+//}
+//.o-home-intro > * {
+//  display: flex;
+//  flex-wrap: wrap;
+//  margin-right: calc(#{$s0} / 2 * -1);
+//  margin-left: calc(#{$s0} / 2 * -1);
+//}
+
+//.o-home-intro > * > * {
+//  margin: calc(#{$s0} / 2);
+//  flex-grow: 1;
+//  flex-basis: 15rem;
+//}
+
+//.o-home-intro > * > :first-child {
+//  flex-basis: 0;
+//  flex-grow: 999;
+//  min-width: calc(50% - #{$s0});
+//}
+
+////.c-sitefooter {
+////  padding-bottom: 2em;
+////}
+
+//.c-page-heading {
+//  margin-right: 1rem;
+//}
+
+////.c-page-heading::before {
+////  content: '';
+////  display: inline-block;
+////  width: 10px;
+////  height: 2px;
+////  background-color: var(--primary-color);
+////  margin-left: -12px;
+////  margin-right: 2px;
+////}
+
+////.c-page-heading + * {
+////  margin-top: $spacing-flow;
+////}
+
+//.c-tease-group-heading {
+//  font-size: 1rem;
+//  text-align: right;
+//}
+
+////.c-tease-group-heading + * {
+////  margin-top: $spacing-flow;
+////}
+
+//.c-tease > header + * {
+//  margin-top: $s1;
+//}
+
+//.c-tease__heading {
+//  font-size: 1.25rem;
+//  line-height: 1.4;
+//}
+
+//.c-tease__meta {
+//  margin-top: 0;
+//  // margin-top: $s-4;
+//  // font-size: 0.85em;
+//}
+
+//time {
+//  margin-right: 8px;
+//  color: #757474;
+//  font-style: italic;
+//}
+
+//.c-post header .c-tags {
+//  margin-top: 0.4rem;
+//}
+
+/*
+ * DESIGN TOKENS
+ */
+@import 'tokens';
+
+
+
+/*
+ * UTILITIES
+ */
+
+.visually-hidden {
+ clip-path:inset(50%);
+ height:1px;
+ overflow:hidden;
+ position:absolute;
+ white-space:nowrap;
+ width:1px
 }
-
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-  background: #2b2b2b;
-}
-
-/* Inline code */
-:not(pre) > code[class*="language-"] {
-  padding: 0.1em;
-  white-space: normal;
-}
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: #d4d0ab;
-}
-
-.token.punctuation {
-  color: #fefefe;
-}
-
-.token.property,
-.token.tag,
-.token.constant,
-.token.symbol,
-.token.deleted {
-  color: #ffa07a;
-}
-
-.token.boolean,
-.token.number {
-  color: #00e0e0;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  color: #abe338;
-}
-
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string,
-.token.variable {
-  color: #00e0e0;
-}
-
-.token.atrule,
-.token.attr-value,
-.token.function {
-  color: #ffd700;
-}
-
-.token.keyword {
-  color: #00e0e0;
-}
-
-.token.regex,
-.token.important {
-  color: #ffd700;
-}
-
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-.token.italic {
-  font-style: italic;
-}
-
-.token.entity {
-  cursor: help;
-}
-
-@media screen and (-ms-high-contrast: active) {
-  code[class*="language-"],
-  pre[class*="language-"] {
-    color: windowText;
-    background: window;
-  }
-
-  :not(pre) > code[class*="language-"],
-  pre[class*="language-"] {
-    background: window;
-  }
-
-  .token.important {
-    background: highlight;
-    color: window;
-    font-weight: normal;
-  }
-
-  .token.atrule,
-  .token.attr-value,
-  .token.function,
-  .token.keyword,
-  .token.operator,
-  .token.selector {
-    font-weight: bold;
-  }
-
-  .token.attr-value,
-  .token.comment,
-  .token.doctype,
-  .token.function,
-  .token.keyword,
-  .token.operator,
-  .token.property,
-  .token.string {
-    color: highlight;
-  }
-
-  .token.attr-value,
-  .token.url {
-    font-weight: normal;
-  }
-}
-
-
-
-//--------------------------------------------------------------
-// #5. Utility
-//--------------------------------------------------------------
 
 .display\:none {
   display: none;
 }
-.max-width\:measure {
-  max-width: $measure;
-}
 
-.margin-top\:none {
+// .max-width\:none {
+//   max-width: none;
+// }
+
+//.max-width\:measure {
+//  max-width: $measure;
+//}
+
+.mt-0 {
   margin-top: 0;
 }
-
-
-
-/* Inline #4 | http://localhost:8080/notes/looking-forward-to-2020/ */
-
-// ul {
-//   list-style: none;
-// }
-
-// li::before {
-//   /* content: '.attr'; */
-//   display: block;
-//   width: 8px;
-//   height: 2px;
-//   background: #1ca8a8;
-//   vertical-align: top;
-//   margin-top: 11px;
-//   margin-right: 8px;
-//   float: left;
-// }
-
-// ul {
-//   margin-left: 0 !important;
-// }
-
-// li {
-// }
-
-// h2 {
-// }
-
-// /* Inline #1 | http://localhost:8080/notes/looking-forward-to-2020/ */
-
-// h3 {
-//   font-weight: 400;
-//   font-size: 18px;
-//   font-style: italic;
-// }
-
-// * + * {
-//   /* margin-top: 1.25rem; */
-//   margin-top: 2.25rem;
-// }
