--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
     <title>Matthew Passmore: {{ title }}</title>
     <link rel="alternate" href="/feed/writing.xml" title="Matthew Passmore's writing" type="application/atom+xml">
 
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i|Cabin:400,500,500i,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:600|Source+Sans+Pro:400,400i,600,700&display=swap" rel="stylesheet">
     <style>{% include 'css/main.css' %}</style>
 
     <!-- DETECT JS -->
@@ -20,31 +20,32 @@
     
       <a href="#main">Skip to content</a>
 
-      <header class="[ c-siteheader ] [ margin-top:none ]">
+      <header class="[ c-siteheader ] [ o-sidebar ] [ mt-0]">
 
-        <!-- BRANDING -->
-        <div class="c-siteheader__brand">
-          <a href="/">Matthew Passmore</a>
-          <p>Website Strategist</p>
-        </div><!-- .c-siteheader__brand -->
+        <div class="o-sidebar__inner">
 
-        <!-- CONTACT -->
-        <!-- <dl class="c-siteheader__contact"> -->
-        <!--   <dt class="visually-hidden">Phone</dt> --> 
-        <!--   <dd>{{ global.tel }}</dd> --> 
-        <!--   <dt class="visually-hidden">Email</dt> --> 
-        <!--   <dd>{{ global.email }}</dd> --> 
-        <!-- </dl> -->
+          <!-- NAVIGATION -->
+          <nav class="c-siteheader__nav">
+            <ul class="list-reset max-w-none text-300">
+              <li class="font-serif font-semibold">
+                <a class="c-underline" href="/contact/">
+                  Let's talk
+                  <svg class="text-hotpink"><use xlink:href="#icon-chat"></use></svg>
+                </a>
+              </li>
+              <li><a href="#about">About</a></li>
+              <li><a href="/contact/">Contact</a></li>
+              <li><a href="/notes/">Writing</a></li>
+            </ul>
+          </nav>
 
-        <!-- NAVIGATION -->
-        <nav class="c-siteheader__nav">
-          <p>Menu:</p>
-          <ul class="reset menu">
-            <li><a href="#about">About</a></li>
-            <li><a href="/contact/">Contact</a></li>
-            <li><a href="/notes/">Writing</a></li>
-          </ul>
-        </nav>
+          <!-- INTRO -->
+          <div class="[ c-siteheader__intro ] [ max-w-short ]">
+            {{ site.intro | markdownFilter | safe }}
+          </div><!-- .c-siteheader__intro -->
+          
+        </div><!-- .o-sidebar__inner -->
+
       </header><!-- .c-siteheader -->
 
       <main>
@@ -56,7 +57,13 @@
 
 
       <footer>
-        <a href="/feed/writing.xml">RSS Feed</a>
+        <ul class="list-reset max-w-none">
+          <li><a href="#about">About</a></li>
+          <li><a href="/contact/">Contact</a></li>
+          <li><a href="/notes/">Writing</a></li>
+          <li><a href="/feed/writing.xml">RSS</a></li>
+        </ul>
+        <small>Made with love in Cardiff, Wales</small>
       </footer>
 
     </div><!-- .o-wrapper -->
