--- a/src/scss/_tokens.scss
+++ b/src/scss/_tokens.scss
@@ -22,6 +22,14 @@
   background-color: var(--tertiary-color)
 }
 
+.bg-cyan {
+  background-color: var(--cyan)
+}
+
+.bg-hotpink {
+  background-color: var(--hotpink)
+}
+
 .bg-grey-100 {
   background-color: var(--grey-100)
 }
@@ -59,15 +67,23 @@
 }
 
 .font-sans {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+  font-family: var(--sans-serif)
 }
 
 .font-serif {
-  font-family: Georgia, Cambria, "Times New Roman", Times, serif
+  font-family: var(--serif)
 }
 
 .font-mono {
-  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
+  font-family: var(--mono)
+}
+
+.text-0 {
+  font-size: 0
+}
+
+.text-100 {
+  font-size: var(--step--3)
 }
 
 .text-200 {
@@ -202,6 +218,14 @@
   line-height: 2
 }
 
+.m-0 {
+  margin: 0
+}
+
+.m-100 {
+  margin: var(--step--3)
+}
+
 .m-200 {
   margin: var(--step--2)
 }
@@ -238,6 +262,10 @@
   margin: auto
 }
 
+.-m-100 {
+  margin: calc(var(--step--3) * -1)
+}
+
 .-m-200 {
   margin: calc(var(--step--2) * -1)
 }
@@ -268,6 +296,26 @@
 
 .-m-900 {
   margin: calc(var(--step-5) * -1)
+}
+
+.my-0 {
+  margin-top: 0;
+  margin-bottom: 0
+}
+
+.mx-0 {
+  margin-left: 0;
+  margin-right: 0
+}
+
+.my-100 {
+  margin-top: var(--step--3);
+  margin-bottom: var(--step--3)
+}
+
+.mx-100 {
+  margin-left: var(--step--3);
+  margin-right: var(--step--3)
 }
 
 .my-200 {
@@ -360,6 +408,16 @@
   margin-right: auto
 }
 
+.-my-100 {
+  margin-top: calc(var(--step--3) * -1);
+  margin-bottom: calc(var(--step--3) * -1)
+}
+
+.-mx-100 {
+  margin-left: calc(var(--step--3) * -1);
+  margin-right: calc(var(--step--3) * -1)
+}
+
 .-my-200 {
   margin-top: calc(var(--step--2) * -1);
   margin-bottom: calc(var(--step--2) * -1)
@@ -438,6 +496,38 @@
 .-mx-900 {
   margin-left: calc(var(--step-5) * -1);
   margin-right: calc(var(--step-5) * -1)
+}
+
+.mt-0 {
+  margin-top: 0
+}
+
+.mr-0 {
+  margin-right: 0
+}
+
+.mb-0 {
+  margin-bottom: 0
+}
+
+.ml-0 {
+  margin-left: 0
+}
+
+.mt-100 {
+  margin-top: var(--step--3)
+}
+
+.mr-100 {
+  margin-right: var(--step--3)
+}
+
+.mb-100 {
+  margin-bottom: var(--step--3)
+}
+
+.ml-100 {
+  margin-left: var(--step--3)
 }
 
 .mt-200 {
@@ -584,6 +674,22 @@
   margin-left: auto
 }
 
+.-mt-100 {
+  margin-top: calc(var(--step--3) * -1)
+}
+
+.-mr-100 {
+  margin-right: calc(var(--step--3) * -1)
+}
+
+.-mb-100 {
+  margin-bottom: calc(var(--step--3) * -1)
+}
+
+.-ml-100 {
+  margin-left: calc(var(--step--3) * -1)
+}
+
 .-mt-200 {
   margin-top: calc(var(--step--2) * -1)
 }
@@ -728,6 +834,14 @@
   max-width: var(--measure-compact)
 }
 
+.p-0 {
+  padding: 0
+}
+
+.p-100 {
+  padding: var(--step--3)
+}
+
 .p-200 {
   padding: var(--step--2)
 }
@@ -758,6 +872,26 @@
 
 .p-900 {
   padding: var(--step-5)
+}
+
+.py-0 {
+  padding-top: 0;
+  padding-bottom: 0
+}
+
+.px-0 {
+  padding-left: 0;
+  padding-right: 0
+}
+
+.py-100 {
+  padding-top: var(--step--3);
+  padding-bottom: var(--step--3)
+}
+
+.px-100 {
+  padding-left: var(--step--3);
+  padding-right: var(--step--3)
 }
 
 .py-200 {
@@ -838,6 +972,38 @@
 .px-900 {
   padding-left: var(--step-5);
   padding-right: var(--step-5)
+}
+
+.pt-0 {
+  padding-top: 0
+}
+
+.pr-0 {
+  padding-right: 0
+}
+
+.pb-0 {
+  padding-bottom: 0
+}
+
+.pl-0 {
+  padding-left: 0
+}
+
+.pt-100 {
+  padding-top: var(--step--3)
+}
+
+.pr-100 {
+  padding-right: var(--step--3)
+}
+
+.pb-100 {
+  padding-bottom: var(--step--3)
+}
+
+.pl-100 {
+  padding-left: var(--step--3)
 }
 
 .pt-200 {
@@ -990,6 +1156,14 @@
 
 .text-tertiary {
   color: var(--tertiary-color)
+}
+
+.text-cyan {
+  color: var(--cyan)
+}
+
+.text-hotpink {
+  color: var(--hotpink)
 }
 
 .text-grey-100 {
