chore (home): outline content

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -342,7 +342,7 @@ button svg {
 /*
  * Objects
  */
-@import "objects.layout";
+// @import "objects.layout";
 @import "objects.wrapper";
 @import "objects.sidebar";
 // @import "objects.cluster";
