--- a/src/index.njk
+++ b/src/index.njk
@@ -4,53 +4,45 @@ controller: home
 ---
 
 <!-- INTRO -->
-<div class="c-home-intro o-hetfield">
-  <h1>{{ home.introHeading }}</h1>
-  <p>{{ home.introContent }}</p>
-  <div class="c-home-intro__image">
-    <img src="/images/me.jpg" alt="Matthew Passmore">
-  </div><!-- .c-home-intro__image -->
-</div><!-- .o-hetfield -->
+<div class="c-home-intro">
+  <h1>{{ home.strapline | safe }}</h1>
+</div><!-- .c-home-intro -->
 
 
 <!-- PROBLEMS -->
-<div class="c-home-problems o-hetfield">
-  <h2>Why business seek my help</h2>
-  <ul class="o-hetfield">
+<div class="c-home-problems">
+  <h2>How I can help your business </h2>
+  <ul class="list-reset">
     {% for problem in home.problems %}
     <li>
       <h3>{{ problem.title }}</h3>
-      <p>{{ problem.desc }}</p>
+      {{ problem.desc | markdownFilter | safe }}
     </li>
     {% endfor %}
   </ul>
 </div><!-- .c-home-problems -->
 
 
-<div class="o-hetfield">
+<!-- SERVICES -->
+<div class="c-home-services">
+  <h2>How I help businesses thrive</h2>
+  <ol class="list-reset">
+    {% for service in home.services %}
+    <li>
+      <h3>{{ service.title }}</h3> 
+      {{ service.desc | markdownFilter | safe }}
+    </li>
+    {% endfor %}
+  </ol>
+</div><!-- .c-home-services -->
 
-  <!-- SERVICES -->
-  <div class="c-home-services">
-    <h2>How I help businesses thrive</h2>
-    <ol class="reset">
-      {% for service in home.services %}
-      <li>
-        <h3>{{ service.title }}</h3> 
-        <p>{{ service.desc }}</p>
-      </li>
-      {% endfor %}
-    </ol>
-  </div><!-- .c-home-services -->
-  
-  
-  <!-- CLIENTS -->
-  <div class="c-home-clients">
-    <h2>Trusted to deliver successful projects</h2>
-    <ul class="reset">
-      {% for client in home.clients %}
-      <li><img src="/images/{{ client.logo }}" alt="{{ client.name }}"></li>
-      {% endfor %}
-    </ul>
-  </div><!-- .c-home-clients -->
 
-</div><!-- .o-hetfield -->
+<!-- CLIENTS -->
+<div class="c-home-clients">
+  <h2>Trusted to deliver successful projects</h2>
+  <ul class="list-reset">
+    {% for client in home.clients %}
+    <li><img src="/images/{{ client.logo }}" alt="{{ client.name }}"></li>
+    {% endfor %}
+  </ul>
+</div><!-- .c-home-clients -->
